# packaging

./: .gitignore  .gitmodules  README.md
AUR/: README.md
AppImage/: Dockerfile  build-custom-toolchain.sh  build-liblcf-and-player.sh  make-appimage.sh  run-docker-build.sh
Flatpak/: flatpak-launcher.sh
Flatpak/firststart/: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
Flatpak/firststart/src/: main.c  mkdir_p.c  mkdir_p.h
Flatpak/firststart/ui/: assistant.glade
OBS/: README.md
_scripts/: _lib.sh  get_archive.sh  get_aur_snapshot.sh  prepare_rebuild.sh
easyrpg-player/: .gitignore  PKGBUILD  README.md  add_changelog.sh  debian.changelog  debian.control  debian.rules  debianize.sh  easyrpg-player-Debian_9.0.dsc  easyrpg-player-xUbuntu_16.04.dsc  easyrpg-player-xUbuntu_18.04.dsc  easyrpg-player-xUbuntu_18.10.dsc  easyrpg-player.dsc  easyrpg-player.spec  fix-alsa-conditional.patch  fix_build_with_sdl2_mixer.patch  get-aur-update.sh  get-player-archive.sh  guard-sdl-mousewheel.patch
fluidsynth/: _service
fmtlib/: .gitignore  README.md  fmtlib-erpg_5.3.0-1.dsc
ladspa-sdk/: _service
liblcf/: .gitignore  PKGBUILD  README.md  add_changelog.sh  debian.changelog  debian.control  debian.rules  debianize.sh  get-aur-update.sh  get-liblcf-archive.sh  liblcf.dsc  liblcf.spec
mad/: _service
mad-wheezy/: _service
modplug/: _service
sdl2/: README.md  _service  libsdl2_2.0.2+dfsg1-6ubuntu2.dsc  (+1 more)
sdl2-mixer/: README.md  _service  libsdl2-mixer_2.0.0+dfsg1-5.debian.tar.xz  libsdl2-mixer_2.0.0+dfsg1-5.dsc
sdl2-wheezy/: README.md  _service
(+52 files in other folders)
